--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@auth0/auth0-angular": "^1.10.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
