--- a/EandLBankSystem/Account.WebAPI/appsettings.json
+++ b/EandLBankSystem/Account.WebAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AccountDatabase": "server=localhost\\SQL2019;Database=EandL.Account;Trusted_Connection=True;"
+    "AccountDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Account;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
