--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -24,7 +24,10 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "bootstrap-scss": "^4.6.2",
     "rxjs": "~7.5.0",
+    "sass": "^1.54.8",
+    "scss": "^0.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
