--- a/EandLBankSystem/Transaction.NSB/appsettings.json
+++ b/EandLBankSystem/Transaction.NSB/appsettings.json
@@ -7,9 +7,9 @@
   },
 
   "ConnectionStrings": {
-    "TransactionDatabase": "server=localhost\\SQL2019;Database=EandL.Transaction;Trusted_Connection=True;",
+    "TransactionDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Transaction;Trusted_Connection=True;",
     "RabbitMQ": "host=localhost",
-    "NSBConnection": "server=localhost\\SQL2019;Database=EandL.NSB;Trusted_Connection=True;"
+    "NSBConnection": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.NSB;Trusted_Connection=True;"
   },
 
   "Queues": {
