Move NSB into API: server

--- a/EandLBankSystem/Transaction.WebAPI/appsettings.json
+++ b/EandLBankSystem/Transaction.WebAPI/appsettings.json
@@ -8,12 +8,14 @@
 
   "ConnectionStrings": {
     "TransactionDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Transaction;Trusted_Connection=True;",
-    "RabbitMQ": "host=localhost"
+    "RabbitMQ": "host=localhost",
+    "NSBConnection": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.NSB;Trusted_Connection=True;"
+
   },
 
   "Queues": {
     "TransactionAPIQueue": {
-      "Name": "TransactionAPI"
+      "Name": "Transaction"
     }
   },
 
