--- a/EandLBankSystem/Account.WebAPI/Account.WebAPI.csproj
+++ b/EandLBankSystem/Account.WebAPI/Account.WebAPI.csproj
@@ -12,11 +12,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NServiceBus" Version="7.7.4" />
+    <PackageReference Include="NServiceBus.Extensions.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0" />
+    <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.5.1" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Account.Messages\Account.Messages.csproj" />
     <ProjectReference Include="..\Account.Service\Account.Service.csproj" />
+    <ProjectReference Include="..\Transaction.Messages\Transaction.Messages.csproj" />
   </ItemGroup>
 
 </Project>
