--- a/EandLBankSystem/Transaction.WebAPI/Transaction.WebAPI.csproj
+++ b/EandLBankSystem/Transaction.WebAPI/Transaction.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Account.Messages\Account.Messages.csproj" />
+    <ProjectReference Include="..\Transaction.Messages\Transaction.Messages.csproj" />
     <ProjectReference Include="..\Transaction.Service\Transaction.Service.csproj" />
   </ItemGroup>
 
