--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.0",
+    "@angular/cdk": "^14.2.1",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.2.0",
-    "@angular/material": "^14.2.0",
+    "@angular/material": "^14.2.1",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "bootstrap-scss": "^4.6.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.5.0",
     "sass": "^1.54.8",
     "scss": "^0.2.4",
