Add Operation flow : server

--- a/EandLBankSystem/Account.Service/Account.Service.csproj
+++ b/EandLBankSystem/Account.Service/Account.Service.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Account.Data\Account.Data.csproj" />
+    <ProjectReference Include="..\Transaction.Messages\Transaction.Messages.csproj" />
   </ItemGroup>
 
 </Project>
