--- a/EandLBankSystem/Account.Data/Account.Data.csproj
+++ b/EandLBankSystem/Account.Data/Account.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
+  </ItemGroup>
+
 </Project>
