create EmailVerification buisness layer : server

--- a/EandLBankSystem/Account.Service/Account.Service.csproj
+++ b/EandLBankSystem/Account.Service/Account.Service.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="NServiceBus" Version="7.7.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Account.Data\Account.Data.csproj" />
+    <ProjectReference Include="..\Account.Messages\Account.Messages.csproj" />
     <ProjectReference Include="..\Transaction.Messages\Transaction.Messages.csproj" />
   </ItemGroup>
 
