--- a/EandLBankSystem/Account.WebAPI/appsettings.json
+++ b/EandLBankSystem/Account.WebAPI/appsettings.json
@@ -6,14 +6,21 @@
     }
   },
   "ConnectionStrings": {
-    "AccountDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Account;Trusted_Connection=True;",
+    "AccountDatabase": "server=localhost\\SQL2019;Database=EandL.Account;Trusted_Connection=True;",
     "RabbitMQ": "host=localhost",
-    "NSBConnection": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.NSB;Trusted_Connection=True;"
+    "NSBConnection": "server=localhost\\SQL2019;Database=EandL.NSB;Trusted_Connection=True;"
   },
   "Queues": {
     "AccountAPIQueue": {
       "Name": "Account"
     }
+  },
+  "MailSettings": {
+    "Mail": "elw@outlook.co.il",
+    "DisplayName": " E&L Bank",
+    "Password": "sstt1414",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587
   },
   "AllowedHosts": "*"
 }
