fix migrations : server

--- a/EandLBankSystem/Account.WebAPI/appsettings.json
+++ b/EandLBankSystem/Account.WebAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "AccountDatabase": "server=localhost\\SQL2019;Database=EandL.Account;Trusted_Connection=True;",
+    "AccountDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Account;Trusted_Connection=True;",
     "RabbitMQ": "host=localhost",
-    "NSBConnection": "server=localhost\\SQL2019;Database=EandL.NSB;Trusted_Connection=True;"
+    "NSBConnection": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.NSB;Trusted_Connection=True;"
   },
   "Queues": {
     "AccountAPIQueue": {
@@ -16,9 +16,9 @@
     }
   },
   "MailSettings": {
-    "Mail": "elw@outlook.co.il",
+    "Mail": "324864800@mby.co.il",
     "DisplayName": " E&L Bank",
-    "Password": "sstt1414",
+    "Password": "Student@264",
     "Host": "smtp-mail.outlook.com",
     "Port": 587
   },
