--- a/EandLBankSystem/Account.WebAPI/appsettings.json
+++ b/EandLBankSystem/Account.WebAPI/appsettings.json
@@ -16,9 +16,9 @@
     }
   },
   "MailSettings": {
-    "Mail": "elw@outlook.co.il",
-    "DisplayName": " E&L Bank",
-    "Password": "sstt1414",
+    "Mail": "324864800@mby.co.il",
+    "DisplayName": "E&L Bank",
+    "Password": "Student@264",
     "Host": "smtp-mail.outlook.com",
     "Port": 587
   },
