--- a/EandLBankSystem/Account.WebAPI/appsettings.json
+++ b/EandLBankSystem/Account.WebAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "AccountDatabase": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.Account;Trusted_Connection=True;",
+    "AccountDatabase": "server=localhost\\SQL2019;Database=EandL.Account;Trusted_Connection=True;",
     "RabbitMQ": "host=localhost",
-    "NSBConnection": "server=DESKTOP-VOPTI8N\\ADMIN;Database=EandL.NSB;Trusted_Connection=True;"
+    "NSBConnection": "server=localhost\\SQL2019;Database=EandL.NSB;Trusted_Connection=True;"
   },
   "Queues": {
     "AccountAPIQueue": {
@@ -16,7 +16,7 @@
     }
   },
   "MailSettings": {
-    "Mail": "324864800@mby.co.il",
+    "Mail": "324863976@mby.co.il",
     "DisplayName": " E&L Bank",
     "Password": "Student@264",
     "Host": "smtp-mail.outlook.com",
